updated QB preferences to allow users to autopopulate preset values

--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -31,6 +31,18 @@
             <setting name="StnQbInvHeaderOtherName" serializeAs="String">
                 <value>Other</value>
             </setting>
+            <setting name="StnQbInvHasHeaderOther1" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StnQbInvHeaderOtherName1" serializeAs="String">
+                <value>Other1</value>
+            </setting>
+            <setting name="StnQbInvHasHeaderOther2" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StnQbInvHeaderOtherName2" serializeAs="String">
+                <value>Other2</value>
+            </setting>
         </WPFDesktopUI.Properties.Settings>
     </userSettings>
   <runtime>
