--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -96,6 +96,7 @@
       <HintPath>..\packages\PropertyChanged.Fody.3.2.8\lib\net40\PropertyChanged.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite, Version=1.0.113.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
@@ -269,6 +270,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Content Include="bin\x86\Debug\Plugins\StaffNamePreprocessor.dll" />
+    <Content Include="bin\x86\Debug\Plugins\StaffNamePreprocessor.pdb" />
     <Content Include="Database\QbDb.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -286,6 +289,10 @@
       <Project>{83EAEC0B-5CAF-4767-841B-21D913A8557A}</Project>
       <Name>MCBusinessLogic</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PluginProjects\StaffNamePreprocessor\StaffNamePreprocessor.csproj">
+      <Project>{7383E26D-6E26-4117-B328-6D2E126CFF1D}</Project>
+      <Name>StaffNamePreprocessor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QBConnect\QBConnect.csproj">
       <Project>{370F8889-4815-4BC4-ADBF-BF305A4A41A3}</Project>
       <Name>QBConnect</Name>
@@ -297,7 +304,10 @@
   <ItemGroup>
     <Resource Include="Views\Images\icon-sangwa.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+    <Folder Include="bin\x86\Release\Plugins\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
