--- a/src/PluginProjects/InterfaceLibraries/InterfaceLibraries.csproj
+++ b/src/PluginProjects/InterfaceLibraries/InterfaceLibraries.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7383E26D-6E26-4117-B328-6D2E126CFF1D}</ProjectGuid>
+    <ProjectGuid>{3EC19AE5-CF3C-4B18-A79B-3EA38B073C02}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StaffNamePreprocessor</RootNamespace>
-    <AssemblyName>StaffNamePreprocessor</AssemblyName>
+    <RootNamespace>InterfaceLibraries</RootNamespace>
+    <AssemblyName>InterfaceLibraries</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\WPFDesktopUI\bin\x86\Debug\Plugins\</OutputPath>
+    <OutputPath>..\..\WPFDesktopUI\bin\x86\Release\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,14 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StaffNamePreprocessor.cs" />
+    <Compile Include="IPreprocessor.cs" />
+    <Compile Include="IPreprocessorMetaData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\InterfaceLibraries\InterfaceLibraries.csproj">
-      <Project>{3EC19AE5-CF3C-4B18-A79B-3EA38B073C02}</Project>
-      <Name>InterfaceLibraries</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
