--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -289,9 +289,9 @@
       <Project>{83EAEC0B-5CAF-4767-841B-21D913A8557A}</Project>
       <Name>MCBusinessLogic</Name>
     </ProjectReference>
-    <ProjectReference Include="..\PluginProjects\StaffNamePreprocessor\StaffNamePreprocessor.csproj">
-      <Project>{7383E26D-6E26-4117-B328-6D2E126CFF1D}</Project>
-      <Name>StaffNamePreprocessor</Name>
+    <ProjectReference Include="..\PluginProjects\InterfaceLibraries\InterfaceLibraries.csproj">
+      <Project>{3EC19AE5-CF3C-4B18-A79B-3EA38B073C02}</Project>
+      <Name>InterfaceLibraries</Name>
     </ProjectReference>
     <ProjectReference Include="..\QBConnect\QBConnect.csproj">
       <Project>{370F8889-4815-4BC4-ADBF-BF305A4A41A3}</Project>
