--- a/src/PluginProjects/InterfaceLibraries/InterfaceLibraries.csproj
+++ b/src/PluginProjects/InterfaceLibraries/InterfaceLibraries.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPreprocessor.cs" />
-    <Compile Include="IPreprocessorMetaData.cs" />
+    <Compile Include="IPluginMetaData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
