--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -129,6 +129,10 @@
     <Compile Include="Models\CustomerModels\Customer.cs" />
     <Compile Include="Models\CustomerModels\Interfaces\ICustomer.cs" />
     <Compile Include="Models\CustomerModels\Interfaces\IDb.cs" />
+    <Compile Include="Models\PluginModels\ClientPlugin.cs" />
+    <Compile Include="Models\PluginModels\Interfaces\IClientDetails.cs" />
+    <Compile Include="Models\PluginModels\Interfaces\IClientEssentials.cs" />
+    <Compile Include="Models\PluginModels\Interfaces\IClientPlugin.cs" />
     <Compile Include="Models\QuickBooksModels\GroupBy.cs" />
     <Compile Include="Models\QuickBooksModels\Interfaces\IQuickBooksModel.cs" />
     <Compile Include="Models\QuickBooksModels\QuickBooksModel.cs" />
@@ -153,6 +157,7 @@
     <Compile Include="Models\SidePaneModels\Presents\Preset.cs" />
     <Compile Include="Models\SidePaneModels\Presents\PresetModel.cs" />
     <Compile Include="Models\SidePaneModels\QuickBooksSidePaneModel.cs" />
+    <Compile Include="ViewModels\Interfaces\IDataGrid.cs" />
     <Compile Include="ViewModels\PluginViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
