--- a/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
+++ b/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
@@ -47,10 +47,12 @@
       <HintPath>..\packages\MSTest.TestFramework.2.1.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\PluginModels\PluginModelTests.cs" />
     <Compile Include="Models\QuickBooksModels\GroupByTests.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbDateTimeAttributeTests.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbComboBoxTests.cs" />
@@ -68,6 +70,10 @@
     <ProjectReference Include="..\MCBusinessLogic\MCBusinessLogic.csproj">
       <Project>{83EAEC0B-5CAF-4767-841B-21D913A8557A}</Project>
       <Name>MCBusinessLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PluginProjects\InterfaceLibraries\InterfaceLibraries.csproj">
+      <Project>{3EC19AE5-CF3C-4B18-A79B-3EA38B073C02}</Project>
+      <Name>InterfaceLibraries</Name>
     </ProjectReference>
     <ProjectReference Include="..\QBConnect\QBConnect.csproj">
       <Project>{370F8889-4815-4BC4-ADBF-BF305A4A41A3}</Project>
