--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Models\PluginModels\Interfaces\IClientEssentials.cs" />
     <Compile Include="Models\PluginModels\Interfaces\IClientPlugin.cs" />
     <Compile Include="Models\PluginModels\Interfaces\IPluginModel.cs" />
+    <Compile Include="Models\PluginModels\PluginException.cs" />
     <Compile Include="Models\PluginModels\PluginModel.cs" />
     <Compile Include="Models\QuickBooksModels\GroupBy.cs" />
     <Compile Include="Models\QuickBooksModels\Interfaces\IQuickBooksModel.cs" />
