--- a/src/WPFDesktopUI/packages.config
+++ b/src/WPFDesktopUI/packages.config
@@ -3,6 +3,7 @@
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net472" />
   <package id="Fody" version="6.1.1" targetFramework="net472" developmentDependency="true" />
+  <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="3.2.8" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net472" />
 </packages>
