--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -13,7 +13,7 @@
         </layout>
       </appender>
       <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-        <file value="${LocalAppData}/Sangwa Soltutions/Invoice Importer by Sangwa/Logs/FileLog.log"/>
+        <file value="${LocalAppData}/Sangwa Solutions/Invoice Importer by Sangwa/Logs/FileLog.log"/>
         <appendToFile value="true"/>
         <rollingStyle value="Size" />
         <maximumFileSize value="10MB" />
