--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -9,7 +9,7 @@
     <log4net>
       <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%date{ABSOLUTE} [%logger] %level - %message%newline%exception"/>
+          <conversionPattern value="%date [%logger]%newline %level - %message%newline%exception"/>
         </layout>
       </appender>
       <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -21,7 +21,7 @@
         <staticLogFileName value="true"/>
         <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%date{ABSOLUTE} [%logger] %level - %message%newline%exception"/>
+          <conversionPattern value="%date [%logger]%newline %level - %message%newline%exception"/> 
         </layout>
       </appender>
       <root>
