--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -31,7 +31,7 @@
       </root>
     </log4net>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=|DataDirectory|\Database\QbDb.db;Version=3" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=|DataDirectory|/Sangwa Solutions/Invoice Importer by Sangwa/Database/QbDb.db;Version=3" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
