--- a/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
+++ b/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
@@ -20,6 +20,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -88,7 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MCBusinessLogic\MCBusinessLogic.csproj">
-      <Project>{83EAEC0B-5CAF-4767-841B-21D913A8557A}</Project>
+      <Project>{83eaec0b-5caf-4767-841b-21d913a8557a}</Project>
       <Name>MCBusinessLogic</Name>
     </ProjectReference>
     <ProjectReference Include="..\PluginProjects\InterfaceLibraries\InterfaceLibraries.csproj">
@@ -96,7 +97,7 @@
       <Name>InterfaceLibraries</Name>
     </ProjectReference>
     <ProjectReference Include="..\QBConnect\QBConnect.csproj">
-      <Project>{370F8889-4815-4BC4-ADBF-BF305A4A41A3}</Project>
+      <Project>{370f8889-4815-4bc4-adbf-bf305a4a41a3}</Project>
       <Name>QBConnect</Name>
     </ProjectReference>
     <ProjectReference Include="..\WPFDesktopUI\WPFDesktopUI.csproj">
