--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="WPFDesktopUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="WPFDesktopUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
     <log4net>
@@ -15,9 +15,9 @@
       <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
         <file value="${ALLUSERSPROFILE}/Sangwa Solutions/Invoice Importer by Sangwa/Logs/FileLog.log"/>
         <appendToFile value="true"/>
-        <rollingStyle value="Size" />
-        <maximumFileSize value="10MB" />
-        <maxSizeRollBackups value="5" />
+        <rollingStyle value="Size"/>
+        <maximumFileSize value="10MB"/>
+        <maxSizeRollBackups value="5"/>
         <staticLogFileName value="true"/>
         <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
         <layout type="log4net.Layout.PatternLayout">
@@ -25,16 +25,16 @@
         </layout>
       </appender>
       <root>
-        <level value="DEBUG" />
+        <level value="DEBUG"/>
         <appender-ref ref="ConsoleAppender"/>
         <appender-ref ref="RollingFileAppender"/>
       </root>
     </log4net>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=|DataDirectory|/Sangwa Solutions/Invoice Importer by Sangwa/Database/QbDb.db;Version=3" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=|DataDirectory|/Sangwa Solutions/Invoice Importer by Sangwa/Database/QbDb.db;Version=3" providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <userSettings>
         <WPFDesktopUI.Properties.Settings>
@@ -42,13 +42,13 @@
                 <value>,</value>
             </setting>
             <setting name="StnQbInvTemplateName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="StnQbInvHasTemplate" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="StnQbFilePath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="StnQbInvHasHeaderOther" serializeAs="String">
                 <value>False</value>
@@ -73,12 +73,12 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.112.1" newVersion="1.0.112.1" />
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.112.1" newVersion="1.0.112.1"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
